# fastapi-crud-proj2

./: README.md  exceptions.py  main.py  models.py  pyproject.toml  schema.py  service.py
